# shred-stream

./: Cargo.toml  README.md  build.rs
protos/: shredstream.proto
src/: lib.rs  main.rs
