[package]
name = "shred-stream"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]


tonic = { version = "0.14.1", features = ["tls-webpki-roots"] }
tonic-build = "0.14.1"
protobuf-src = "2.1.1"
prost = "0.14.1"
prost-types = "0.14.1"
tonic-prost = "0.14.1"
anyhow = "1.0.53"
thiserror = "2.0.16"
tokio = { version = "1.44.1", features = ["full"] }
solana-entry = "2.3.7"
bincode = "1.3.3"


[build-dependencies]
tonic-prost-build = "0.14.1"
protobuf-src = "2.1.1"
